nakon što se odaberu pjesme za playlistu prvo se doda nova playlista i onda se odabrane pjesme dodaju u playlistu

--- a/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
@@ -144,7 +144,11 @@
                     </containerView>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Choose Songs" id="Mbu-CM-lFO">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="kV7-vo-Thf"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="kV7-vo-Thf">
+                            <connections>
+                                <action selector="addNewPlaylist:" destination="yQV-Cb-VKV" id="jw9-Wg-L0e"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="buttonAdd" destination="kV7-vo-Thf" id="Ahh-Hg-qCq"/>
