--- a/iBach/iBach/iBach/Classes/Modules/Registration/Registration.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Registration/Registration.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nle-Go-Bmv">
                                 <rect key="frame" x="0.0" y="116" width="375" height="551"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
                                     <segue destination="09Z-Ef-7w0" kind="embed" id="FVR-cO-bL2"/>
                                 </connections>
