--- a/iBach/iBach/iBach/Classes/Modules/Music/Music.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Music/Music.storyboard
@@ -1,90 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RU1-oy-oE5">
-    <device id="retina6_1" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sOt-jG-Y5B">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Music-->
-        <scene sceneID="Sja-A9-Lin">
+        <scene sceneID="LBz-2J-zG2">
             <objects>
-                <viewController storyboardIdentifier="Music" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Gsz-6o-f6h" customClass="MusicViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="qht-2s-pCc" customClass="AppView" customModule="iBach" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="47D-yn-zEG" customClass="AppView" customModule="iBach" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <connections>
-                                    <segue destination="lmo-8y-lDx" kind="embed" id="dBM-G2-5LN"/>
-                                </connections>
-                            </containerView>
-                            <view hidden="YES" alpha="0.94999999999999996" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HuQ-g1-RnG" customClass="AppView" customModule="iBach" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="609" width="414" height="64"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0p8-Rt-YGI" customClass="AppLabel" customModule="iBach" customModuleProvider="target">
-                                        <rect key="frame" x="69" y="9" width="298" height="18"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LeP-wF-ae5">
-                                        <rect key="frame" x="8" y="9" width="46" height="46"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBJ-WL-wRX" customClass="AppSubhead" customModule="iBach" customModuleProvider="target">
-                                        <rect key="frame" x="69" y="35" width="298" height="17"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="nGI-la-GCR" appends="YES" id="czy-VT-tCz"/>
-                                </connections>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="p9Y-5d-Mff"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Music" id="TwT-SU-1IB"/>
-                    <connections>
-                        <outlet property="imageCoverArt" destination="LeP-wF-ae5" id="3h2-NA-oZK"/>
-                        <outlet property="labelAuthor" destination="mBJ-WL-wRX" id="sde-qt-B26"/>
-                        <outlet property="labelSongTitle" destination="0p8-Rt-YGI" id="Vji-xV-2qU"/>
-                        <outlet property="miniPlayerView" destination="HuQ-g1-RnG" id="fjm-vs-jur"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7dn-ff-JdL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="nGI-la-GCR"/>
-            </objects>
-            <point key="canvasLocation" x="759.20000000000005" y="-269.41529235382313"/>
-        </scene>
-        <!--Music-->
-        <scene sceneID="mXb-X6-kCy">
-            <objects>
-                <tableViewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="lmo-8y-lDx" customClass="MusicTableViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="emT-oa-vQ6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
+                <tableViewController id="1do-gg-zD8" customClass="MusicTableViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hlU-QD-bXM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" showsReorderControl="YES" indentationWidth="10" reuseIdentifier="trackCell" rowHeight="70" id="bTb-ts-4uM" customClass="TrackTableViewCell" customModule="iBach" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="70"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bTb-ts-4uM" id="FdD-Ba-LGf" customClass="AppView" customModule="iBach" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="69.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ym0-Ex-WZQ">
@@ -115,38 +53,33 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="lmo-8y-lDx" id="4vm-mb-ole"/>
-                            <outlet property="delegate" destination="lmo-8y-lDx" id="OTc-OD-Sbh"/>
+                            <outlet property="dataSource" destination="1do-gg-zD8" id="Vb6-O8-dfU"/>
+                            <outlet property="delegate" destination="1do-gg-zD8" id="B7o-hA-cRo"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Music" id="ecn-r8-nJs"/>
-                    <connections>
-                        <outlet property="tableView" destination="emT-oa-vQ6" id="USY-qU-FpD"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="Music" id="Rnu-XQ-njv"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pMn-sf-SkF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2lX-tk-Dyg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1556" y="-285.60719640179911"/>
+            <point key="canvasLocation" x="897" y="473"/>
         </scene>
         <!--Music-->
-        <scene sceneID="vqm-k5-f2K">
+        <scene sceneID="VYm-QB-dwU">
             <objects>
-                <navigationController storyboardIdentifier="MusicNav" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RU1-oy-oE5" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MusicNav" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sOt-jG-Y5B" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Music" image="Music Icon" id="llD-k3-yR7"/>
-                    <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="UXp-Dx-JMz">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="l90-Ke-qD1">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Gsz-6o-f6h" kind="relationship" relationship="rootViewController" id="t3Z-1V-oIt"/>
+                        <segue destination="1do-gg-zD8" kind="relationship" relationship="rootViewController" id="UE5-z3-SCG"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hNK-Ib-OUj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fIZ-Za-1Er" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-180" y="-269.41529235382313"/>
+            <point key="canvasLocation" x="-25" y="473"/>
         </scene>
     </scenes>
     <resources>
